eliminated weird overflow x issues caused by giving flex-container 100vw

--- a/src/components/cardLayout.css
+++ b/src/components/cardLayout.css
@@ -39,7 +39,7 @@ text-align: right;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 1rem;
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 @media screen and (max-width: 768px){
